Added ui-table for vacation planner. added option for working days only.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,10 +23,10 @@
         "indent": ["warn", 2],
         "key-spacing": "warn",
         "keyword-spacing": "warn",
-        "max-len": ["warn", { "code": 120, "tabWidth": 2 }],
+        "max-len": ["warn", { "code": 140, "tabWidth": 2 }],
         "max-lines": ["warn", {"skipBlankLines": true, "skipComments": true}],
         "max-lines-per-function": ["warn", {"max": 80, "skipBlankLines": true, "skipComments": true}],
-        "max-statements": ["warn", { "max": 25}],
+        "max-statements": ["warn", { "max": 30}],
         "max-params": ["warn", {"max": 6}],
         "no-else-return": "warn",
         "no-empty": "warn",
@@ -51,6 +51,7 @@
         "yoda": "warn",
 
         "array-element-newline": "off",
+        "function-call-argument-newline": "off",
         "linebreak-style": "off",
         "line-comment-position": "off",
         "multiline-comment-style": "off",
